test/tests/bad/undef-type_2.carth
;; UndefType

(define: (foo x) (Fun Int Foo) (foo x))
